--- a/.gitmodules
+++ b/.gitmodules
@@ -1,18 +1,18 @@
-[submodule "Frontend"]
-	path = Frontend
-	url = https://github.com/linxs953/SI_Dashboard.git
+[submodule "Dashboard"]
+	path = Dashboard
+	url = https://github.com/linxs953/SI_Dashboard
 [submodule "Storage"]
 	path = Storage
-	url = https://github.com/linxs953/SI_Storage.git
-[submodule "Cluster/SI_Scheduler"]
-	path = Cluster/SI_Scheduler
-	url = https://github.com/linxs953/SI_Scheduler.git
-[submodule "Cluster/Core"]
-	path = Cluster/Core
-	url = https://github.com/linxs953/SI_Core.git
+	url = https://github.com/linxs953/SI_Storage
 [submodule "Cluster/Entry"]
 	path = Cluster/Entry
-	url =https://github.com/linxs953/SI_Entry.git
+	url = https://github.com/linxs953/SI_Entry
+[submodule "Cluster/Scheduler"]
+	path = Cluster/Scheduler
+	url = https://github.com/linxs953/SI_Scheduler
 [submodule "Cluster/Registry"]
 	path = Cluster/Registry
-	url =https://github.com/linxs953/SI_Registry.git
+	url = https://github.com/linxs953/SI_Registry
+[submodule "Cluster/Core"]
+	path = Cluster/Core
+	url = https://github.com/linxs953/SI_Core
